@startuml SharpBuy Domain Model

' Style
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor<<ValueObject>> #E1F5FE
    BackgroundColor<<Aggregate>> #FFF9C4
    BackgroundColor<<Entity>> #F5F5F5
    BorderColor #757575
    ArrowColor #424242
}

' Base Classes
abstract class Entity <<Entity>> {
    + {field} Guid Id
    + {field} IReadOnlyCollection<IDomainEvent> DomainEvents
    + RaiseDomainEvent(IDomainEvent event)
    + ClearDomainEvents()
}

' Value Objects
class Money <<ValueObject>> {
    + {field} decimal Amount
    + {field} string Currency
    + {static} operator +(Money, Money): Money
    + {static} Zero(string currency): Money
}

' Product Aggregate
class Product <<Aggregate>> {
    + {field} string Name
    + {field} string Description
    + {field} Money Price
    + {field} string MainPhotoPath
    + {field} List<string> PhotoPaths
    + {field} Inventory Inventory
    + {field} IReadOnlyCollection<ProductCategory> ProductCategories
    --
    + {static} Create(...): Product
    + AddToCategory(Guid categoryId): Result
    + UpdatePrice(Money newPrice): Result
}

class Inventory <<Entity>> {
    + {field} int StockQuantity
    + {field} int ReservedQuantity
    + {field} int AvailableQuantity
    --
    + {static} Create(int stockQuantity): Inventory
    + Reserve(int quantity): Result
    + Release(int quantity): Result
}

class Category <<Aggregate>> {
    + {field} string Name
    + {field} IReadOnlyCollection<ProductCategory> ProductCategories
    --
    + {static} Create(string name): Category
}

class ProductCategory <<Entity>> {
    + {field} Guid ProductId
    + {field} Guid CategoryId
    + {field} Product Product
    + {field} Category Category
}

' User Aggregate
class DomainUser <<Aggregate>> {
    + {field} string Email
    + {field} string FirstName
    + {field} string LastName
    + {field} string PhoneNumber
    + {field} bool IsEmailVerified
    + {field} EmailVerificationToken? EmailVerificationToken
    + {field} Cart Cart
    + {field} IReadOnlyCollection<Order> Orders
    + {field} IReadOnlyCollection<Review> Reviews
    --
    + {static} Create(...): DomainUser
    + VerifyEmail(): Result
}

class EmailVerificationToken <<Entity>> {
    + {field} string Token
    + {field} DateTime ExpiresAt
    + {field} bool IsExpired
    --
    + {static} Create(): EmailVerificationToken
}

' Cart Aggregate
class Cart <<Aggregate>> {
    + {field} Guid OwnerId
    + {field} IReadOnlyCollection<CartItem> Items
    + {field} Money TotalPrice
    --
    + AddCartItem(productId, price, quantity): Result
    + RemoveCartItem(cartItemId): Result
    + Clear(): void
}

class CartItem <<Entity>> {
    + {field} Guid ProductId
    + {field} Money Price
    + {field} int Quantity
    + {field} Money TotalPrice
}

' Order Aggregate
class Order <<Aggregate>> {
    + {field} Guid UserId
    + {field} Guid AddressId
    + {field} OrderStatus Status
    + {field} Money TotalPrice
    + {field} DateTime CreatedAt
    + {field} IReadOnlyCollection<OrderItem> Items
    + {field} Address Address
    --
    + {static} Create(userId, addressId): Order
    + AddOrderItem(...): Result
    + MoveToStatus(OrderStatus newStatus): Result
}

class OrderItem <<Entity>> {
    + {field} Guid OrderId
    + {field} Guid ProductId
    + {field} string ProductName
    + {field} Money Price
    + {field} int Quantity
    + {field} Money TotalPrice
}

enum OrderStatus {
    Open
    Completed
    Cancelled
}

class Address <<Entity>> {
    + {field} Guid? UserId
    + {field} string Street
    + {field} string? ApartmentNumber
    + {field} string City
    + {field} string PostalCode
    + {field} string Country
    --
    + {static} Create(...): Address
}

' Review Aggregate
class Review <<Aggregate>> {
    + {field} Guid ProductId
    + {field} Guid UserId
    + {field} int Rating
    + {field} string Comment
    + {field} DateTime CreatedAt
    --
    + {static} Create(...): Review
}

' Inheritance
Entity <|-- Product
Entity <|-- Category
Entity <|-- ProductCategory
Entity <|-- DomainUser
Entity <|-- EmailVerificationToken
Entity <|-- Cart
Entity <|-- CartItem
Entity <|-- Order
Entity <|-- OrderItem
Entity <|-- Address
Entity <|-- Review
Entity <|-- Inventory

' Composition & Aggregation
Product "1" *-- "1" Inventory
Product "1" --> "*" ProductCategory
Product --> Money

Category "1" --> "*" ProductCategory

DomainUser "1" *-- "1" Cart
DomainUser "1" --> "*" Order
DomainUser "1" --> "*" Review
DomainUser "1" o-- "0..1" EmailVerificationToken

Cart "1" *-- "*" CartItem
CartItem --> Money

Order "1" *-- "*" OrderItem
Order "1" --> "1" Address
Order --> OrderStatus
Order --> Money
OrderItem --> Money

Review --> Product : reviews
Review --> DomainUser : written by

note right of Product
  **Aggregate Root**
  Manages product catalog
  with inventory tracking
  and categorization
end note

note right of DomainUser
  **Aggregate Root**
  User authentication,
  email verification,
  and profile management
end note

note right of Cart
  **Aggregate Root**
  Shopping cart before
  order placement
end note

note right of Order
  **Aggregate Root**
  Order processing
  and fulfillment
end note

note bottom of Money
  **Value Object**
  Immutable
  Validates currency
  in operations
end note

@enduml
